--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/sarai3te/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/Edmundegh/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/Dinobybt/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Dominickryj/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/Earnesteg6/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/Domenicrte/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/Dinorahdf7/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/8/29/n13196137.md#1" target="_blank">无神论——人类面临的最危险骗局</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/8/29/n13196137.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13196160-shutterstock_1431674009-150x120.jpg" align ="left"></a>在人类历史长河里，主体文化都是神传文化体系，直到19世纪马克思主义也就是共产主义的诞生，有体系的无神论才正式在世间出现。神传文化和无神论在世间的对立，其实就是宇宙中神对人类的救赎计划和魔鬼对人类的毁灭骗局的最终表现。“信神还是信魔”、“救赎还是毁灭”，是贯穿人类文化和历史的一条根本主线。这是各种宗教、民间传说所提及的人.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 6:00 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222017.md#1" target="_blank">【名家专栏】从加州州长选举活动看不同价值观</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222017.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222024-Elder-8-29-1200x900-150x120.jpg" align ="left"></a>洛杉矶——周日晚上，我参加了在长滩（Long Beach）为拉里?埃尔德（Larry Elder）的加州州长竞选举行的筹款活动。当我站在的兴奋的人群中时，收到了一条短信，标题是“纽森州长为了攻击拉里?埃尔德而改变演讲焦点”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 5:30 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222015.md#1" target="_blank">【名家专栏】残奥会无法实现的双重焦点</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222015.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222021-paralympics-1338086367-700x420-150x120.jpg" align ="left"></a>奥运会已经够糟糕了！尤其当中共认为奥运会很重要时，你就可以借此判断它有多糟糕。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 4:50 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222583.md#1" target="_blank">王友群：中共群体灭绝犯罪必将受到审判</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222583.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222586-1512040645402039-600x400-150x120.jpeg" align ="left"></a>据明慧网9月5日报导，1至8月，中共警察绑架、骚扰法轮功学员12,401人。其中，绑架4,165人；70～80岁的老人108人，80～90岁67人，90岁以上6人，年龄最长者是吉林省吉林市长春路法轮功学员蔡秀芳，98岁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 4:06 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222521.md#1" target="_blank">谢田：拜登策略扑朔迷离 美国商界纠结无语</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222521.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222731-US-Chamber-of-Commerce-GettyImages-175328579-for-Selling-931-and-BW-687-150x120.jpg" align ="left"></a>入主白宫执政八个月后，美国拜登政府仍然没有清晰的对华贸易政策，相关的官方言论扑朔迷离，这促使美国商界在纠结之际，不得不加紧游说，敦促拜登当局，希望早日出台清晰的对华贸易政策。不得不说，拜登政府在政治立场上的偏颇和游移，高层官员对中国共产党政权缺乏清晰的认识，执政方针被次要的目标挡住国际战略的视野，以及美国国内政治中对既.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 12:52 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/8/n13220267.md#1" target="_blank">【有冇搞错】阿富汗自古就产恐怖主义</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/8/n13220267.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222100-9f309073cc50fe157d432c171a18f52d-150x120.jpg" align ="left"></a>美国撤军，中共极为紧张，担心极端恐怖主义渗透中国西部。阿富汗属于波斯化的突厥文化，自古就生产恐怖组织。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 9:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222083.md#1" target="_blank">夏林：加国大选各政党 对人权和中共政策有哪些？</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222083.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222107-shutterstock_1375222112-150x120.jpg" align ="left"></a>每次联邦大选，加拿大对中共的政策都是一个关键的外交议题。今年的联邦大选，对加拿大人来说，与中国的关系比以往更让人关心，因为两个加拿大“麦克”已经被中共以莫须有的罪名关押了超过1,000天，华为的财务总监孟晚舟引渡案又进入最后审判阶段。还有，奄奄一息的香港“一国两制”，中共武统台湾的风险大增，对新疆人的种族灭绝，对国内弱.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 8:57 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221458.md#1" target="_blank">陈思敏：西部战区频换将 背后涉肃清郭徐流毒？</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221458.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221506-Xi-Jinping-promote-military-generals_20210906-150x120.jpeg" align ="left"></a>9月6日消息，习近平向5名新晋升上将颁授军衔。在今次新晋上将名单中，透露西部战区再换司令员，这也是西部战区近一年内第四次更换司令员。
+
+公开信息显示，去年12月，届龄的赵宗岐下，60后的张旭东上。今年7月初，张旭东被免，由战区陆军司令员徐起零接替。9月初，徐起零任命不到两个月被免，由新疆军区司令员汪海江接替出任西部.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 5:14 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221415.md#1" target="_blank">石铭：教师节谈部分教师们的悲惨遭遇</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221415.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221452-2021-08-29_142532--150x120.jpeg" align ="left"></a>教师节到来了，在中共迫害法轮功二十二年中，在中共江泽民集团“名誉上搞臭、经济上截断、肉体上消灭”、“打死算白死，打死算自杀”的灭绝政策下，中国大陆成千上万的教师法轮功学员同样遭受了中共非法绑架、劳教、判刑和残酷迫害，许多人被迫害致死。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 4:52 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221354.md#1" target="_blank">项云：中共的“共同富裕”没有可信度</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221354.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221406-GettyImages-1228369223--150x120.jpeg" align ="left"></a>中共一个会议高调“共同富裕”，频频解释宣传。其定义模糊不定，不知道怎么是“共同富裕”，怎么实现“共同富裕”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 4:25 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221320.md#1" target="_blank">【网海拾贝】“大国崛起”后继无人了</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221320.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221351-GettyImages-1152058253-150x120.jpeg" align ="left"></a>生三胎？晚了！中国有149个城市已进入“深度老龄化”，其中，四川省的深度老龄化城市达17个，数量上位居第一；而山东省65岁以上的人口达1536万人，是中国老龄人口数最多的省分。湖南、安徽、湖北也有类似情况。东北的老龄化同样也受到年轻人口外移的影响，数据显示，东北三省共36市，已经全部进入到深度老龄化阶段。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 3:50 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221126.md#1" target="_blank">袁斌：我们从小到大学到的历史哪些是假的（6）</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13221126.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221314-maxresdefault--150x120.jpeg" align ="left"></a>杨开慧是毛泽东的第二任妻子。当年得知杨的死讯后，毛泽东曾语气沉痛地说过：“开慧之死，百身莫赎”。多年来，在公开场合，毛泽东本人也一再有意无意地表示他对杨开慧的深情真情，称杨为自己的真爱。与此相呼应，中共的宣传机器也一直把毛泽东对杨开慧的感情渲染为伟大的爱情典范。然而，读完《毛泽东——鲜为人知的故事》的有关章节，我们才吃.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 3:35 PM			</td></tr>
@@ -23,19 +34,6 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217535.md#1" target="_blank">唐青：金人庆许永跃十大老虎涉公共情妇门</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217535.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203193-GettyImages-51771762@1200x1200-150x120.jpg" align ="left"></a>中共财长金人庆死得不明不白，退休不明不白，做人也是不明不白。跟他有同样故事的还有神秘的前中共国安部部长许永跃。他们都拜倒在公共情妇李薇的石榴裙下。李薇放倒了十几个中共大老虎，曾被中共官媒公开报导，轰动一时，凸显了中共官场的丑恶。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月08日 5:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217022.md#1" target="_blank">【名家专栏】中共大外宣：利用党媒攻击美国</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217022.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13217036-CCP-CACWA-Kids-IMG_0966WEB-624x450-150x120.jpg" align ="left"></a>在2021年中国共产党建党100周年之际，中共的宣传机器加大了力度赞美中共和习近平。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月08日 4:55 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217628.md#1" target="_blank">沈舟：美军航母进南海 热点再升温</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217628.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13217633-51432526878_569372a0c4_k-150x120.jpg" align ="left"></a>美军9月6日展示航母舰载机图片，卡尔文森号航母已经进入南海。9月5日，中共军机在台湾西南空域出动19架次，应该与美军航母经由巴士海峡驶往南海有关。中美军事对峙全面升温。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月08日 3:52 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217470.md#1" target="_blank">岳山：王沪宁为何没给“优秀党员”金人庆送花圈？</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13217470.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13193895-GettyImages-55931566-150x120.jpg" align ="left"></a>中共前财政部长金人庆日前因家中失火被烧死，他的遗体送别仪式9月5日在北京八宝山殡仪馆举行，多名中共现任及退休高官送花圈吊唁。其他退休高官谁送谁不送不太重要，现任七常委中却只有习近平和主管党建的王沪宁没有送。这当中有什么特别内情吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月08日 12:07 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13216386.md#1" target="_blank">陈思敏：香港股市一隐形“金矿”与周永康余毒</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13216386.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13216528-130620082254100311--150x120.jpeg" align ="left"></a>香港交易所上市的中能控股（全称中国能源开发控股）今年8月曾发公告，截至2021年6月30日止六个月的收益较2020年上半年大幅增长约180%，中期转亏为盈逾4500万港元，原因是于2020年下半年投产的中国塔里木盆地喀什北区块的新建天然气处理厂的产量增加所致。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 4:37 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13216283.md#1" target="_blank">【网海拾贝】黑天鹅降临天安门，对中共是祸是福？</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13216283.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13216340-Screenshot-2021-09-05-at-15.27.47--150x120.png" align ="left"></a>习近平今年1月28日在中共中央政治局集体学习时表示，要能预判未来各种风险挑战，做好应对各种可预料到但容易忽视的危险“灰犀牛”，以及发生率低但一发生就有巨大冲击危险的“黑天鹅”事件。而就在5日北京天安门升旗仪式结束后，一双黑天鹅真的突然降临在广场上，引起众人围观，随后被北京野生动物保护中心接走。黑天鹅效应是政治理论中一个.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 3:20 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13214433.md#1" target="_blank">【名家专栏】严重依赖疫苗 以色列骑虎难下</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13214433.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13214435-vaccine-2-700x420-150x120.jpg" align ="left"></a>在新的病毒变种出现的时候，这个国家不仅率先得到了大量疫苗足够接种全国人民，他们推行施打疫苗的速度也是相当之快，现在，他们又是世界上第一个允许所有12岁以上的国民施打第三剂的国家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 10:21 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13215036.md#1" target="_blank">沈舟：二十大提前布局 军队将领大变动</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13215036.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13217530-Xi-Jinping-promote-military-generals_20210906-600x400-1-150x120.jpg" align ="left"></a>9月6日，习近平晋升新一批上将，显示两个战区、两个军种司令和国防大学校长换人，特别是西部战区司令三度更迭。中共军队高级将领大面积更换，二十大布局提前开始。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 9:47 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13215556.md#1" target="_blank">资本主义VS社会主义——导读《官僚制》</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13215556.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13215647-63302f143b982693ef48ae03991b0115-150x120.jpg" align ="left"></a>2021年4月2日9时28分，台铁408次太鲁阁号行经花莲大清水隧道，发生出轨事故，8节车厢承载492人中，酿49人死亡、216人轻重伤的惨剧。事发之后各界展开热烈检讨，对于台铁的病入膏肓和组织的怠惰更是众口一致，而“台铁民营化”也被提出。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 8:48 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13214364.md#1" target="_blank">【名家专栏】中共大外宣：美国机构的共谋</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13214364.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13214368-CGTN-logo-1200x675-150x120.jpg" align ="left"></a>北京的国际宣传活动由美国公民和企业提供帮助，因为他们需要中国的资金。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 7:30 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13215240.md#1" target="_blank">王友群：黑天鹅突降天安门 中南海有大震荡？</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13215240.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13215243-515419-600x400-1-150x120.png" align ="left"></a>9月5日早上，一只黑天鹅突然降临天安门广场，且不慌不忙，时而梳理羽毛，时而闲庭信步，引来不少人围观，引发不少网民议论。有网民称，这是“黑天鹅事件”，并问，“主何吉凶？”“难道??”。
-
-黑天鹅事件，一般指非常难以预测且不寻常的事件。黑天鹅突降天安门，是否预示着中南海将有不寻常的事件发生？
-
-观察中共内政外交，确.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 6:23 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/8/n13218643.md#1" target="_blank">林忌：“限籍令”的奇妙排外逻辑</a><br></h3>近日中国大陆疯传所谓“限籍令”的消息，指一些拥有双重国籍，或者本身并非中国籍的艺人，将被大陆封杀，禁止在中国赚钱云云；由一些著名的香港艺人（如谢霆锋），到由始至终都是新加坡籍的歌手（如孙燕姿），都在这些流传的名单之内；当中谢霆锋在接受中共党媒节目访问中，提及“看到一些评论说，你不是加拿大人吗？”然后就回应“自己在香港出.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月08日 1:41 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/7/n13216206.md#1" target="_blank">中共罪行录之四十九：川大最后一个“右派”</a><br></h3>1957年，由时任中共四川省委书记李井泉为组长的四川大学反右领导小组成立，第三组长是时任校长的谢文炳。当时右派指标尚有二个未完成，于是把知识分子的发言纪录再审视一遍，以便定人。当翻阅到一个名叫载星儒（四川大学原校长彭迪先的秘书）的材料时发现他一句呜放的言论也没有。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月07日 2:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdhfsi3794/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/news392_5.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdhfsi3794/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_5.htm">https://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://github.com/zdhfsi3794/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
